--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -20,10 +20,9 @@ body {
 /* 앱처럼 좁은 뷰포트 영역 중앙 배치 */
 #root {
   overflow-x: hidden;
-  width: 50vh;
-  max-width: 100vw;
+  width: 100%;
+  max-width: 768px;
   min-height: 100dvh;
-  background-color: #f9f9f9;
   box-sizing: border-box;
   position: relative;
 }
